--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -12,4 +12,4 @@
   .form-actions
     = f.submit "Save Changes", :class => "btn btn-success"
     or 
-    = link_to "cancel",  profile_path
+    = link_to "cancel",  collection_path
