--- a/app/views/admin/accounts/index.haml
+++ b/app/views/admin/accounts/index.haml
@@ -1,3 +1,6 @@
+- content_for :sidebar do
+  = link_to "Add new account", new_admin_account_path, :class => "btn"
+
 %h1 Accounts
 
 %table.table.table-striped.table-hover
@@ -8,7 +11,9 @@
   %tbody
     - collection.each do |resource|
       %tr
-        %td= resource.name
-        %td= link_to 'Delete', "#", :class => "btn btn-danger"
+        %td= link_to resource.name, resource_path(resource)
+        %td
+          = link_to 'Edit', edit_resource_path(resource), :class => "btn"
+          = link_to 'Delete', resource_path(resource), :method => :delete, :class => "btn btn-danger"
 
   - will_paginate collection
