--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -1,3 +1,6 @@
+- content_for :sidebar do
+  = link_to "Add new user", new_admin_user_path, :class => "btn"
+
 %h1 Users
 
 %table.table.table-striped.table-hover
@@ -10,11 +13,13 @@
   %tbody
     - collection.each do |resource|
       %tr
-        %td= "#{resource.lastname}, #{resource.firstname}"
+        %td= link_to "#{resource.lastname}, #{resource.firstname}", resource_path(resource)
         %td= resource.email
         %td
           - if resource.admin?
             &#x2713;
-        %td= link_to 'Delete', "#", :class => "btn btn-danger"
+        %td
+          = link_to 'Edit', edit_resource_path(resource), :class => "btn"
+          = link_to 'Delete', resource_path(resource), :method => :delete, :class => "btn btn-danger"
 
   - will_paginate collection
